# Legacy-SBFCam

./: .env_default  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
python/: check_if_online.py  cv_functions.py  get_cookies.bat  get_pixels.bat  join_game.py  pyproject.toml
resources/: main.ps1  pull_latest.bat  start sbfcam.bat  start_censor.bat  start_main.bat  start_main.ps1  windows_sbfcam_startup.bat
resources/hud/: README.md  animations.css  hud.html  main.css  script.js
rust/: Cargo.toml
rust/src/: main.rs
src/: main.rs
