[tool.poetry]
name = "sbfcam"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.3.0"
psutil = "^5.9.1"
mss = "^6.1.0"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]
black = "^24.3.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
types-selenium = "^3.141.9"
types-psutil = "^5.9.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
