[package]
name = "sbf_cam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
enigo = "0.0.14"
winapi = "0.3.9"
windows-win = "2.4.1"
twitch-irc = "4.0.0"
tokio = {version = "1.17.0", features = ["rt-multi-thread", "macros", "full", "sync"]}
queues = "1.0.2"
serde_json = "1.0.83"
serde = { version = "1.0.143", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = "0.4.20"
simple-websockets = "0.1.4"
